fix(article): code block does not make page wider if text is too long

--- a/src/article.css
+++ b/src/article.css
@@ -22,8 +22,8 @@ img {
 
 .article-wrapper > .container > .row {
   max-width: 800px;
-    margin: 0 auto;
-
+  margin: 0 auto;
+  overflow-x: scroll;
 }
 
 .article-title {
